# riscv-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml  format.yml  test.yml
include/: ISAController.hpp  RegisterFile.hpp
src/: ISAController.cpp  RegisterFile.cpp
tests/: test_registerfile.cpp
